@@ -26,37 +26,51 @@ public class StatisticUtil {
         this.statClient = statClient;
     }
 
-    public Map<Long, EndpointStatisticDto> getAllStatistic(LocalDateTime start) {
-        return getEventsStatistic(start, Collections.emptyList());
+    public void fillEventViews(Event event) {
+        fillEventsViews(List.of(event));
+    }
+
+    public void fillEventsViews(List<Event> events) {
+        fillEventsViews(null, events);
+    }
+
+    public void fillEventsViews(LocalDateTime start, List<Event> events) {
+        Map<Long, EndpointStatisticDto> eventsStatistic = getEventsStatistic(start, events);
+        fillEventsViews(events, eventsStatistic);
+    }
+
+    public void fillEventsViews(List<Event> events, Map<Long, EndpointStatisticDto> eventsStatistic) {
+        for (Event event : events) {
+            Long eventId = event.getId();
+            if (eventsStatistic.containsKey(eventId)) {
+                event.setViews(eventsStatistic.get(event.getId()).getHits());
+            } else {
+                event.setViews(0L);
+            }
+        }
+    }
+
+    public Map<Long, EndpointStatisticDto> getAllEventsStatistic(LocalDateTime start) {
+        return getEventsStatistic(start, null);
     }
 
     public Map<Long, EndpointStatisticDto> getEventsStatistic(LocalDateTime start, List<Event> events) {
-        if (events == null || events.isEmpty()) {
-            return Collections.emptyMap();
+        if (start == null) {
+            start = LocalDateTime.of(-1, 1, 1, 0, 0);
+        }
+
+        if (events == null) {
+            events = Collections.emptyList();
         }
 
         List<String> endpointUris = new ArrayList<>();
-        events.forEach(event -> endpointUris.add(getEventEndpointUri(event.getId())));
-
+        for (Event event : events) {
+            endpointUris.add(getEventEndpointUri(event.getId()));
+        }
         return Objects.requireNonNull(statClient.getEndpointsStatistic(start, LocalDateTime.now().plusSeconds(1L),
                                 endpointUris.toArray(new String[0]), true)
                         .getBody()).stream()
                 .collect(Collectors.toMap(s -> getEventIdFromEndpointUri(s.getUri()), Function.identity()));
-    }
-
-    public void fillEventViews(Event event) {
-        List<EndpointStatisticDto> views = statClient.getEndpointsStatistic(
-                        TimeUtil.instantToLocalDateTime(event.getCreatedOn()),
-                        LocalDateTime.now().plusSeconds(1L),
-                        new String[]{"/events/" + event.getId()},
-                        true)
-                .getBody();
-
-        if (views == null || views.isEmpty()) {
-            event.setViews(0L);
-        } else {
-            event.setViews(views.getFirst().getHits());
-        }
     }
 
     public void addView(String uri, String ip) {
